@@ -8,8 +8,8 @@
 \arguments{
   \item{input}{A data frame with the following fields.
   \code{nox} and\code{no2} (roadside NOX and NO2
-  concentrations), \code{backnox}, \code{backno2} and
-  \code{backo3} (hourly background concentrations of each
+  concentrations), \code{back_nox}, \code{back_no2} and
+  \code{back_o3} (hourly background concentrations of each
   pollutant). In addition \code{temp} (temperature in
   degrees Celsius) and \code{cl} (cloud cover in Oktas).
   Note that if \code{temp} and \code{cl} are not available,
